Fixed alignment on services

--- a/css/services.css
+++ b/css/services.css
@@ -1,8 +1,12 @@
-/*#services{
-  background: url("../img/services-bg.jpg");
-  background-size:100%; 
-} */
+#services{
+    background: url("../img/services.jpg");
+}
 
+.temp-dark{
+  background-color: rgba(0,0,0,0.5);
+  height: 100vh;
+  width: 100vw;
+}
 div.services-container{
     display:inline-flex;
     margin:55px;
@@ -12,9 +16,11 @@ div.services-container{
 .card-container {
   position: relative;
   width: 350px;
-  height: 350px;
-  margin:55px; 
-  background-color: blue;
+  height: 400px;
+  margin-left:60px;
+  margin-right:60px;
+  margin-top:0px; 
+  background-color: rgba(0, 0, 0,0.65);
   text-align: center;
   border-radius: 25px;
   color:white;
